--- a/classroom_scene.html
+++ b/classroom_scene.html
@@ -33,7 +33,7 @@
 <div id="brainWrap">
   <iframe id="brainFrame"
           src="about:blank"
-          data-src="brain_scene_vr_conservative_merge.html"
+          data-src="brain_scene.html"
           allow="autoplay; fullscreen; xr-spatial-tracking; accelerometer; gyroscope; gamepad"
           allowfullscreen
           tabindex="0"
