--- a/vaporized.html
+++ b/vaporized.html
@@ -15,8 +15,6 @@
   #stage{position:fixed;inset:0;display:grid;place-items:center}
   video{max-width:100vw;max-height:100vh;object-fit:cover;background:#000}
 
-  /* Start gate overlay with a simple white play button */
-  #gate{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:rgba(0,0,0,.75)}
   #gateBtn{
     width:96px;height:96px;border-radius:50%;border:none;background:#fff;cursor:pointer;position:relative;
     box-shadow:0 8px 24px rgba(0,0,0,.45);
@@ -59,6 +57,70 @@
     display: none;
     z-index: 1000;
   }
+/* 3D Text Effects for Oculus */
+#gate {
+  position: fixed;
+  inset: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0,0,0,.85);
+  color: white;
+  text-align: center;
+  gap: 25px;
+}
+
+.gate-text {
+  font-family: system-ui, Segoe UI, Arial;
+  text-align: center;
+  margin: 0;
+}
+
+#title {
+  font-size: 52px;
+  font-weight: 800;
+  color: #fff;
+  text-shadow: 
+    1px 1px 0 #23c2ff,
+    2px 2px 0 #23c2ff,
+    3px 3px 0 #23c2ff,
+    4px 4px 0 #23c2ff,
+    5px 5px 0 #23c2ff,
+    0 0 5px #fff,
+    0 0 10px #23c2ff,
+    0 0 15px #23c2ff;
+  transform: perspective(500px) rotateX(15deg);
+  letter-spacing: 2px;
+  animation: subtle-float 4s ease-in-out infinite;
+}
+
+#byline {
+  font-size: 22px;
+  color: #e0e0e0;
+  font-weight: 500;
+}
+
+#hashtag {
+  font-size: 20px;
+  color: #23c2ff;
+  font-weight: 700;
+  text-shadow: 
+    0 0 5px #23c2ff,
+    0 0 10px #23c2ff,
+    0 0 15px #23c2ff;
+  animation: glow-pulse 2s ease-in-out infinite alternate;
+}
+
+@keyframes subtle-float {
+  0%, 100% { transform: perspective(500px) rotateX(15deg) translateY(0); }
+  50% { transform: perspective(500px) rotateX(15deg) translateY(-5px); }
+}
+
+@keyframes glow-pulse {
+  0% { opacity: 0.8; }
+  100% { opacity: 1; }
+}
 </style>
 </head>
 <body>
@@ -67,9 +129,12 @@
     <video id="vid" playsinline preload="auto" muted></video>
   </div>
 
-  <!-- Start gate (guarantees audio) -->
+   <!-- Start gate (guarantees audio) -->
   <div id="gate">
+    <div class="gate-text" id="title">Vaporized</div>
     <button id="gateBtn" aria-label="Play"><span>Play</span></button>
+    <div class="gate-text" id="byline">By: Vape Breakers</div>
+    <div class="gate-text" id="hashtag">#BreaktheVape</div>
   </div>
 
   <!-- Choice UI (minimal text) -->
